[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttork"
version = "0.2.2"
dependencies = ["textual", "pyyaml", "requests", "kubernetes"]
requires-python = ">=3.10"
authors = [{ name = "Andy Waller", email = "awaller@gmail.com" }]
maintainers = [{ name = "Andy Waller", email = "awaller@gmail.com" }]
description = "Textual Tilt Orkestrator: Multiple-Repository Tilt Orchestration Tool."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Tilt", "Docker", "Kubernetes", "k8s", "ttork"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/SwordOfDamocles/ttork"
Documentation = "https://github.com/SwordOfDamocles/ttork"
Repository = "https://github.com/SwordOfDamocles/ttork"
"Bug Tracker" = "https://github.com/SwordOfDamocles/ttork/issues"
Changelog = "https://github.com/SwordOfDamocles/ttork/blob/master/CHANGELOG.md"

[project.scripts]
ttork = "ttork:main(sys.argv[1:])"
